testdata/baselines/reference/submodule/compiler/jsdocParamTagOnPropertyInitializer.errors.txt
/a.js(3,9): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== /a.js (1 errors) ====
    class Foo {
        /**@param {string} x */
        m = x => x.toLowerCase();
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    